src/styles/main.scss
// scss-lint:disable IdSelector
@import 'variables';
@import 'mixins';

html {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 62.5%;
    font-weight: 300;
    line-height: 1.42857143;
    text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
}

body {
    color: $text-dark;
    display: flex;
    flex-direction: column;
    font-size: 1.6rem;
    line-height: 2.5rem;
    margin: 0;
    min-height: 100vh;
}

* {
    box-sizing: border-box;
}

a {
    color: color(primary);
    text-decoration: none;
}

p {
    margin-bottom: 1rem;
}

sup {
    font-size: 1rem;
    margin-left: 0.1rem;
    position: relative;
    top: -0.5rem;
    vertical-align: top;
}

.text-content {
    flex-direction: column;
    margin: 0 auto;
    max-width: 120rem;
}

.go-to {
    color: color(cyan);
    font-size: 1.7rem;
    font-weight: 500;

    &::after {
        content: ' >';
    }
}

.sr-only {
    border: 0;
    clip: rect(0, 0, 0, 0);
    height: 0.1rem;
    margin: -0.1rem;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 0.1rem;
}

.hidden {
    display: none;
}

.no-scroll {
    overflow: hidden;
}

#main {
    animation: fadeIn ease-in 1;
    animation-delay: 0.2s;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
    opacity: 0;
    padding-top: 6rem;

    @include desktop {
        padding-top: 11rem;
    }
}

#maincontent {
    outline: none;

    &:focus {
        animation: pulse ease-in 1;
        animation-duration: 1s;
        opacity: 1;
    }
}

@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

@keyframes pulse {
    from {
        background-color: rgba(color(primary), 0.2);
    }
}

// Boxed Page

.page {
    display: flex;
    flex-flow: column nowrap;
    width: 100vw;

    .boxed {
        display: flex;
        flex-flow: column nowrap;
        max-width: $boxed-width;
        margin: 0 auto 4rem;
        padding: 0 1.5rem;
    }

}

.subhead {
    padding: 8rem 1.5rem 0;
    text-align: center;

    h1 {
        line-height: 1;
    }

    a {
        color: color(cyan);

        &:hover,
        &:focus {
            color: rgba(color(cyan), 0.5);
            }
    }

}

[href=""],  // for testing empty links
[href="#"] {
    border: 0.3rem solid color(danger);
}

@import 'components/add-another';
@import 'components/bucket';
@import 'components/buttons';
@import 'components/filter-buttons';
@import 'components/forms';
@import 'components/headers';
@import 'components/option-list';
@import 'components/intro';
@import 'components/responsive';
@import 'components/single-select';
@import 'components/social';
@import 'components/strips';
@import 'components/tag-multi-select';

